--- a/runif_non-plot.tex
+++ b/runif_non-plot.tex
@@ -313,7 +313,8 @@
 \NormalTok{w <-}\StringTok{ }\KeywordTok{grconvertX}\NormalTok{(l}\OperatorTok{$}\NormalTok{rect}\OperatorTok{$}\NormalTok{w, }\DataTypeTok{to=}\StringTok{'ndc'}\NormalTok{) }\OperatorTok{-}\StringTok{ }\KeywordTok{grconvertX}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DataTypeTok{to=}\StringTok{'ndc'}\NormalTok{)}
 \KeywordTok{par}\NormalTok{(}\DataTypeTok{omd=}\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{1}\OperatorTok{-}\NormalTok{w, }\DecValTok{0}\NormalTok{, }\DecValTok{1}\NormalTok{))}
 \KeywordTok{matplot}\NormalTok{(mac, }\DataTypeTok{type =} \KeywordTok{c}\NormalTok{(}\StringTok{"b"}\NormalTok{),}\DataTypeTok{pch=}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{4}\NormalTok{),}\DataTypeTok{col =} \KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{4}\NormalTok{),}\DataTypeTok{xaxt =} \StringTok{"n"}
-\NormalTok{        ,}\DataTypeTok{xlab =} \StringTok{'data length'}\NormalTok{,}\DataTypeTok{ylab =} \StringTok{'service level'}\NormalTok{) }
+\NormalTok{        ,}\DataTypeTok{xlab =} \StringTok{'data length'}\NormalTok{,}\DataTypeTok{ylab =} \StringTok{'service level'}\NormalTok{)}
+\KeywordTok{abline}\NormalTok{(}\DataTypeTok{h=}\FloatTok{0.56}\NormalTok{,}\DataTypeTok{lty=}\DecValTok{2}\NormalTok{,}\DataTypeTok{col=}\StringTok{'black'}\NormalTok{)}
 \KeywordTok{axis}\NormalTok{(}\DecValTok{1}\NormalTok{, }\DataTypeTok{at=}\DecValTok{1}\OperatorTok{:}\DecValTok{5}\NormalTok{, }\DataTypeTok{labels=}\NormalTok{x_axis)}
 \KeywordTok{legend}\NormalTok{(}\KeywordTok{par}\NormalTok{(}\StringTok{'usr'}\NormalTok{)[}\DecValTok{2}\NormalTok{], }\KeywordTok{par}\NormalTok{(}\StringTok{'usr'}\NormalTok{)[}\DecValTok{4}\NormalTok{], }\DataTypeTok{bty=}\StringTok{'n'}\NormalTok{, }\DataTypeTok{xpd=}\OtherTok{NA}
 \NormalTok{       ,}\KeywordTok{c}\NormalTok{(}\StringTok{"DGP"}\NormalTok{, }\StringTok{"DJ"}\NormalTok{,}\StringTok{"PM"}\NormalTok{), }\DataTypeTok{pch=}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{4}\NormalTok{),}\DataTypeTok{col=}\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{,}\DecValTok{2}\NormalTok{,}\DecValTok{4}\NormalTok{))}
