--- a/runif plot.Rmd
+++ b/runif plot.Rmd
@@ -117,6 +117,7 @@ w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=c(1,2,4),col = c(1,2,4),xaxt = "n"
         ,xlab = 'data length',ylab = 'service level') 
+abline(h=0.3,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","PM"), pch=c(1,2,4),col=c(1,2,4))
