--- a/information plot.Rmd
+++ b/information plot.Rmd
@@ -112,7 +112,7 @@ l <- legend(0, 0, bty='n',c("DGP", "DJ","PM"),plot=FALSE, pch=1:3,col=1:3)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=c(1,2,4),col = c(1,2,4),xaxt = "n"
-        ,xlab = 'data length',ylab = 'service level')
+        ,xlab = 'data length',ylab = 'service level',ylim = c(0.27,0.33))
 abline(h=0.3,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
